--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,8 +3,11 @@ spring.application.name=clean-architecture
 server.error.include-stacktrace=never
 server.error.include-message=always
 
+spring.cassandra.keyspace-name=example
+spring.cassandra.local-datacenter=datacenter1
 spring.kafka.consumer.group-id=livetest-java-spring-group
 springdoc.swagger-ui.path=/swagger-ui.html
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.data.cassandra.enabled=false
